--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,36 @@
+appnope==0.1.0
+cycler==0.9.0
+decorator==4.0.6
 Django==1.9
 geopy==1.11.0
+gnureadline==6.3.3
+ipython==4.0.1
+ipython-genutils==0.1.0
+Jinja2==2.8
+jsonschema==2.5.1
+MarkupSafe==0.23
+matplotlib==1.5.0
+networkx==1.10
+numpy==1.10.2
+pandas==0.17.1
+path.py==8.1.2
+pexpect==4.0.1
+pickleshare==0.5
+Pillow==3.0.0
+ptyprocess==0.5
+pylab==0.1.3
+pyparsing==2.0.6
+python-dateutil==2.4.2
+pytz==2015.7
+pyzmq==15.1.0
 requests==2.9.1
+scikit-image==0.11.3
+scikit-learn==0.17
+scipy==0.16.1
+seaborn==0.6.0
+simplegeneric==0.8.1
+six==1.10.0
+sympy==0.7.6.1
+tornado==4.3
+traitlets==4.0.0
 wheel==0.24.0
